--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -7,11 +7,12 @@ $blue           : #C0DEFE;
 $gray           : #4F4F4F;
 
 $green-text     : #00B0A2;
-$blue-text     : #00B0A2;
-$yellow-text     : #00B0A2;
+$blue-text      : #4D8FD6;
+$yellow-text    : #00B0A2;
 
 
 
 // Typo
 
-$base-font:       'Futura PT','Avenir', 'Avenir Next','Helvetica Neue','Segoe UI', 'Verdana', sans-serif;
+$base-font:       'FuturaPT-Medium','Avenir', 'Avenir Next','Helvetica Neue','Segoe UI', 'Verdana', sans-serif;
+$italic-font:     'FuturaPT-MediumObl';
