fixed titles when linking a work

--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -1,9 +1,13 @@
 // Colors
 
 $black          : #000000;
-$green          : #AAE8E1;
+//$green        : #AAE8E1;
+$green          : #9debe2;
 $yellow         : #FFF5D7;
-$blue           : #C0DEFE;
+$yellow         : #fff4d4;
+//$blue         : #C0DEFE;
+$blue           : #b3def6;
+$purple         : #cec8f6;
 $gray           : #4F4F4F;
 
 $green-text     : #00B0A2;
